--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light navbar-expand-xl" style="background-color: #C9E8FF;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'home' %}">Delicium</a>
+    <a class="navbar-brand" href="{% url 'home' %}">PinkYak</a>
 
     {% if user.is_authenticated %}
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
