--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light navbar-expand-xl" style="background-color: #C9E8FF;">
+<nav class="navbar navbar-light navbar-expand-xl" style="background-color: #ffc0cb;">
   <div class="container-fluid">
     <a class="navbar-brand" href="{% url 'home' %}">PinkYak</a>
 
@@ -8,6 +8,7 @@
         <li class="nav-item"><a class="nav-link active" href="{% url 'notes' %}">Notes</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'quotes' %}">Quotes</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'birthdays' %}">Birthdays</a></li>
+        <li class="nav-item"><a class="nav-link active" href="{% url 'dogs' %}">Dogs</a></li>
       </ul>
       <ul class="nav justify-content-end">
         <li class="nav-item nav-link">Hello {{ user.first_name }}</a></li>
