--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,11 +10,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <title>Delicium</title>
+    <title>PinkYak</title>
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
     <!-- semantic UI -->
+    <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
     <link rel="stylesheet" type='text/css' href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.14/semantic.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 
@@ -36,6 +37,10 @@
         </div>
     {% endfor %}
    {% endif %}
+
+<div>
+    <img src="{% static 'yak.jpg' %}" alt="My Image" height="120" style="float: right; margin-left: 10px; padding: 10px;">
+</div>
 
    <br/>
    {% block content %}
