--- a/app/templates/quotes.html
+++ b/app/templates/quotes.html
@@ -5,7 +5,7 @@
         {% csrf_token %}
         <label class="form-label">Quote</label>
         <input type="text" name="quote" class="form-control" style="min-width:500px"><br>
-        <button type="submit" class="btn btn-primary">Add quote</button>
+        <button type="submit" class="btn btn-yak">Add quote</button>
     </form>
     <hr>
     {% for quote in quotes %}
