--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,9 +1,9 @@
-{% load static %}
 <!doctype html>
-<link rel="icon" href="{% static 'wordle.ico' %}">
+{% load static %}
 <html lang="en">
   <head>
     <!-- Required meta tags -->
+    <link rel="icon" href="{% static 'pinkyak.ico' %}">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
