--- a/app/templates/dog.html
+++ b/app/templates/dog.html
@@ -18,6 +18,10 @@
                     <input type="text" name="owners" class="form-control" style="min-width:200px">
                 </td>
                 <td class="p-3">
+                    <label class="form-label">Notes</label>
+                    <input type="text" name="notes" class="form-control" style="min-width:200px">
+                </td>
+                <td class="p-3">
                     <label class="form-label">Picture</label>
                     <input type="file" name="image" class="form-control" style="min-width:200px" accept="image/*">
                 </td>
@@ -38,6 +42,7 @@
         <tr>
           <th scope="col">Dogs</th>
           <th scope="col">Owners</th>
+          <th scope="col">Notes</th>
           <th scope="col">Image</th>
           <th>Bookings</th>
         </tr>
@@ -47,6 +52,7 @@
         <tr>
             <td>{{ item.name }}</td>
             <td>{{ item.owners }}</td>
+            <td>{% if item.notes %} {{ item.notes }} {% endif %}</td>
             <td>
                 {% if item.image %}
                 <img src="{{ item.image.url }}" height="120"/>
