--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -5,6 +5,7 @@
     {% if user.is_authenticated %}
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item"><a class="nav-link active" href="{% url 'diary' %}">Diary</a></li>
+        <li class="nav-item"><a class="nav-link active" href="{% url 'events' %}">Events</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'notes' %}">Notes</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'quotes' %}">Quotes</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'birthdays' %}">Birthdays</a></li>
