--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -10,6 +10,7 @@
         <li class="nav-item"><a class="nav-link active" href="{% url 'quotes' %}">Quotes</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'birthdays' %}">Birthdays</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'dogs' %}">Dogs</a></li>
+        <li class="nav-item"><a class="nav-link active" href="{% url 'clash' %}">Clash</a></li>
       </ul>
       <ul class="nav justify-content-end">
         <li class="nav-item nav-link">Hello {{ user.first_name }}</a></li>
