Add wordle edit

--- a/app/templates/wordle.html
+++ b/app/templates/wordle.html
@@ -55,7 +55,7 @@
         Favourite Word: {{ fav_word }}<br>
         <br>
         {% for x in words_with_count %}
-            {{ x.word }} ({{ x.count }})<br>
+            {{ x.word }} {% if x.count != 0 %} ({{ x.count }}) {% endif %}<br>
         {% endfor %}<br>
         <a href="{% url 'clear' %}" class='btn btn-outline-secondary btn-sm'>Clear</a><br>
     </div>
