Added ability to edit notes.

--- a/app/templates/clash.html
+++ b/app/templates/clash.html
@@ -1,24 +1,24 @@
 {% extends 'base.html'%}
 {% block content %}
     <h1>Clash</h1>
-     <table class="table">
+     <table class="table" style="text-align: center">
       <thead>
         <tr>
-          <th scope="col">Player</th>
+          <th scope="col" style="text-align: left">Player</th>
           <th scope="col">King</th>
-          <th scope="col">Queen</th>
-          <th scope="col">Warden</th>
-          <th scope="col">Champ</th>
-          <th scope="col">Total</th>
+          <th scope="col" style="text-align: center">Queen</th>
+          <th scope="col" style="text-align: center">Warden</th>
+          <th scope="col" style="text-align: center">Champ</th>
+          <th scope="col" style="text-align: center">Total</th>
         </tr>
       </thead>
     {% for player in players %}
         <tr>
-          <td>{{ player }}</td>
-          <td>{{ player.king }} / {{ player.th.king_max }} <a href="{% url 'hero_inc' player.id 'king' %}">+</a></td>
-          <td>{{ player.queen }} / {{ player.th.queen_max }} <a href="{% url 'hero_inc' player.id 'queen' %}">+</a></td>
-          <td>{{ player.warden }} / {{ player.th.warden_max }} <a href="{% url 'hero_inc' player.id 'warden' %}">+</a></td>
-          <td>{{ player.champ }} / {{ player.th.champ_max }} <a href="{% url 'hero_inc' player.id 'champ' %}">+</a></td>
+          <td  style="text-align: left">{{ player }}</td>
+          <td {% if player.king_highlight %} style="background-color: #ffc0cb"{% endif %}>{{ player.king }} / {{ player.th.king_max }} <a href="{% url 'hero_inc' player.id 'king' %}">+</a></td>
+          <td {% if player.queen_highlight %} style="background-color: #ffc0cb"{% endif %}>{{ player.queen }} / {{ player.th.queen_max }} <a href="{% url 'hero_inc' player.id 'queen' %}">+</a></td>
+          <td {% if player.warden_highlight %} style="background-color: #ffc0cb"{% endif %}>{{ player.warden }} / {{ player.th.warden_max }} <a href="{% url 'hero_inc' player.id 'warden' %}">+</a></td>
+          <td {% if player.champ_highlight %} style="background-color: #ffc0cb"{% endif %}>{{ player.champ }} / {{ player.th.champ_max }} <a href="{% url 'hero_inc' player.id 'champ' %}">+</a></td>
           <td>{{ player.total }} / {{ player.th.total }} ({{ player.total_perc }})</td>
         </tr>
     {% endfor %}
