--- a/app/templates/diary.html
+++ b/app/templates/diary.html
@@ -2,11 +2,17 @@
 {% block content %}
 
      <h1 class="form-label">{{ title }}</h1><br>
+
      <form action="{% url 'diary' %}" class="form-inline my-2 my-lg-0" method="POST">
         {% csrf_token %}
-        <textarea name="text" class="form-control" rows="3"></textarea><br>
+        {{ form.media }}
+        {{ form.as_p }}
         <button type="submit" class="btn btn-yak">Add diary entry</button>
-     </form>
+    </form>
+
+<hr>
+
+
 
      <hr>
 
@@ -20,8 +26,8 @@
      <tbody>
         {% for item in objects %}
         <tr>
-            <td>[{{ item.date }}] {{ item.text }}</td>
-            <td><a class="btn btn-yak" href="{% url 'delete_note' item.id %}">Delete</a></td>
+            <td>[{{ item.date }}] {{ item.text | safe }}</td>
+            <td><a class="btn btn-yak" href="{% url 'delete_diary' item.id %}">Delete</a></td>
         </tr>
         {% endfor %}
       </tbody>
