--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -9,6 +9,7 @@
         <li class="nav-item"><a class="nav-link active" href="{% url 'notes' %}">Notes</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'quotes' %}">Quotes</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'birthdays' %}">Birthdays</a></li>
+        <li class="nav-item"><a class="nav-link active" href="{% url 'shopping'%}">Shopping</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'dogs' %}">Dogs</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'clash' %}">Clash</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'wordle'%}">Wordle</a></li>
