--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -13,6 +13,7 @@
         <li class="nav-item"><a class="nav-link active" href="{% url 'dogs' %}">Dogs</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'clash' %}">Clash</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'wordle'%}">Wordle</a></li>
+        <li class="nav-item"><a class="nav-link active" href="{% url 'word'%}">Word</a></li>
       </ul>
       <ul class="nav justify-content-end">
         <li class="nav-item nav-link">Hello {{ user.first_name }}</a></li>
