--- a/app/templates/note.html
+++ b/app/templates/note.html
@@ -25,7 +25,7 @@
             {% ifchanged item.category %}
                   <thead>
                     <tr class="d-flex">
-                      <th class="col-1">Order</th>
+                      <th class="col-1"></th>
                       <th class="col-9">{{ item.category }}</th>
                       <th class="col-2">Control</th>
                     </tr>
