--- a/app/templates/note.html
+++ b/app/templates/note.html
@@ -21,7 +21,7 @@
 <hr>
     <table class="table">
       <tbody>
-        {% for item in children %}
+        {% for item in object.children %}
             {% ifchanged item.category %}
                   <thead>
                     <tr class="d-flex">
