--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -12,6 +12,7 @@
         <li class="nav-item"><a class="nav-link active" href="{% url 'shopping'%}">Shopping</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'dogs' %}">Dogs</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'clash' %}">Clash</a></li>
+        <li class="nav-item"><a class="nav-link active" href="{% url 'timers' %}">Timer</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'wordle'%}">Wordle</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'word'%}">Word</a></li>
       </ul>
