--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -15,6 +15,7 @@
         <li class="nav-item"><a class="nav-link active" href="{% url 'timers' %}">Timer</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'wordle'%}">Wordle</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'word'%}">Word</a></li>
+        <li class="nav-item"><a class="nav-link active" href="{% url 'tides'%}">Tides</a></li>
       </ul>
       <ul class="nav justify-content-end">
         <li class="nav-item nav-link">Hello {{ user.first_name }}</a></li>
