--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -23,6 +23,11 @@
       </ul>
     {% else %}
       <ul class="nav justify-content-end">
+        <li class="nav-item"><a class="nav-link active" href="{% url 'clash' %}">Clash</a></li>
+        <li class="nav-item"><a class="nav-link active" href="{% url 'timers' %}">Timer</a></li>
+        <li class="nav-item"><a class="nav-link active" href="{% url 'wordle'%}">Wordle</a></li>
+        <li class="nav-item"><a class="nav-link active" href="{% url 'word'%}">Word</a></li>
+        <li class="nav-item"><a class="nav-link active" href="{% url 'tides'%}">Tides</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'login' %}">Login</a></li>
       </ul>
     {% endif %}
