--- a/app/templates/quotes.html
+++ b/app/templates/quotes.html
@@ -9,6 +9,6 @@
     </form>
     <hr>
     {% for quote in quotes %}
-    <p>{{ quote.quote }} [{{quote.date}}]</p>
+    <p>{{ quote.quote }}</p>
     {% endfor %}
 {% endblock %}
