--- a/app/templates/wordle.html
+++ b/app/templates/wordle.html
@@ -7,6 +7,9 @@
     .grey {background-color:grey;}
 </style>
 
+<a href="https://www.nytimes.com/games/wordle/index.html" target="_blank" class='btn btn-outline-secondary btn-sm'>Wordle</a>
+<a href="{% url 'past_words' %}" class='btn btn-outline-secondary btn-sm'>History</a><br>
+
 <div class="row">
     <div class="col-sm-4">
     </div>
