--- a/app/templates/dog.html
+++ b/app/templates/dog.html
@@ -1,53 +1,8 @@
-
 {% extends 'base.html'%}
 {% block content %}
 
-     <h1 class="form-label">{{ title }}</h1><br>
-
-    {% if edit_mode %}
-     <form action="{% url 'dog_edit' dog.id %}" class="form-inline my-2 my-lg-0" method="POST" enctype="multipart/form-data">
-    {% else %}
-     <a href="{% url 'dog_diary' %}">Diary</a>
-     <form action="{% url 'dogs' %}" class="form-inline my-2 my-lg-0" method="POST" enctype="multipart/form-data">
-
-     {% endif %}
-        {% csrf_token %}
-
-        <table class="table-primary">
-            <tbody>
-                <td>
-                    <label class="form-label">Dog's name</label>
-                    <input type="text" name="name" class="form-control" style="min-width:200px"
-                    {% if edit_mode %} value = "{{ dog.name }}" placeholder = "{{ dog.name }}" {% endif %}
-                    >
-                </td>
-                <td class="p-3">
-                    <label class="form-label">Owners</label>
-                    <input type="text" name="owners" class="form-control" style="min-width:200px"
-                    {% if edit_mode %} value = "{{ dog.owners }}" placeholder = "{{ dog.owners }}" {% endif %}
-                    >
-                </td>
-                <td class="p-3">
-                    <label class="form-label">Notes</label>
-                    <input type="text" name="notes" class="form-control" style="min-width:200px"
-                    {% if edit_mode %} {% if dog.notes %} value = "{{ dog.notes }}" placeholder = "{{ dog.notes }}" {% endif %} {% endif %}
-                    >
-                </td>
-                <td class="p-3">
-                    <label class="form-label">Picture</label>
-                    <input type="file" name="image" class="form-control" style="min-width:200px" accept="image/*">
-                </td>
-                <td>
-                    <p></p>
-                    <button type="submit" class="btn btn-yak">{% if edit_mode %} Update Details {% else %} Add dog {% endif %}</button>
-                </td>
-            </tbody>
-
-
-        </table>
-     </form>
-
-     <hr>
+    <h1>{{ title }}</h1><br>
+    <a href="{% url 'dog_diary' %}">Diary</a>
 
      <table class="table">
       <thead>
@@ -82,6 +37,49 @@
     </table>
 
 
+    {% if edit_mode %}
+        <h1>Edit Mode</h1><br>
+        <form action="{% url 'dog_edit' dog.id %}" class="form-inline my-2 my-lg-0" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+    {% else %}
+        <h1>Add Dog</h1><br>
+        <form action="{% url 'dogs' %}" class="form-inline my-2 my-lg-0" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+     {% endif %}
+        <table class="table-primary">
+            <tbody>
+                <td>
+                    <label class="form-label">Dog's name</label>
+                    <input type="text" name="name" class="form-control" style="min-width:200px"
+                    {% if edit_mode %} value = "{{ dog.name }}" placeholder = "{{ dog.name }}" {% endif %}
+                    >
+                </td>
+                <td class="p-3">
+                    <label class="form-label">Owners</label>
+                    <input type="text" name="owners" class="form-control" style="min-width:200px"
+                    {% if edit_mode %} value = "{{ dog.owners }}" placeholder = "{{ dog.owners }}" {% endif %}
+                    >
+                </td>
+                <td class="p-3">
+                    <label class="form-label">Notes</label>
+                    <input type="text" name="notes" class="form-control" style="min-width:200px"
+                    {% if edit_mode %} {% if dog.notes %} value = "{{ dog.notes }}" placeholder = "{{ dog.notes }}" {% endif %} {% endif %}
+                    >
+                </td>
+                <td class="p-3">
+                    <label class="form-label">Picture</label>
+                    <input type="file" name="image" class="form-control" style="min-width:200px" accept="image/*">
+                </td>
+                <td>
+                    <p></p>
+                    <button type="submit" class="btn btn-yak">{% if edit_mode %} Update Details {% else %} Add dog {% endif %}</button>
+                </td>
+            </tbody>
 
+
+        </table>
+     </form>
+            <br><br>
+            <br><br>
 
 {% endblock %}
