--- a/app/templates/dog.html
+++ b/app/templates/dog.html
@@ -18,7 +18,13 @@
         {% for item in objects %}
         <tr>
             <td><a href="{% url 'dog_edit' item.id %}">{{ item.name }}</a></td>
-            <td>{{ item.owners }}</td>
+            <td>
+                {% if item.owners_link %}
+                    <a href="{% url 'note' item.owners_link.id %}">{{ item.owners_link.heading }}</a>
+                {% else %}
+                    {{ item.owners }}
+                {% endif %}
+            </td>
             <td>{% if item.notes %} {{ item.notes }} {% endif %}</td>
             <td>
                 {% if item.image %}
@@ -56,9 +62,14 @@
                 </td>
                 <td class="p-3">
                     <label class="form-label">Owners</label>
-                    <input type="text" name="owners" class="form-control" style="min-width:200px"
-                    {% if edit_mode %} value = "{{ dog.owners }}" placeholder = "{{ dog.owners }}" {% endif %}
-                    >
+                    <input type="text" name="owners" class="form-control" style="min-width:200px" {% if edit_mode %} value = "{{ dog.owners }}" placeholder = "{{ dog.owners }}" {% endif %}>
+                    <select name="owners_link" class="form-control" id="id_owners_link">
+                         <option value="" selected>[Select]</option>
+                        {% for person in people %}
+                         <option value="{{ person.id }}">{{ person.heading }}</option>
+                        {% endfor %}
+                    </select>
+
                 </td>
                 <td class="p-3">
                     <label class="form-label">Notes</label>
