--- a/app/templates/wordle.html
+++ b/app/templates/wordle.html
@@ -11,8 +11,9 @@
 <div class="row">
     <div class="col-sm-2">
         <h2>Nav</h2>
-        <a href="https://www.nytimes.com/games/wordle/index.html" target="_blank" class='btn btn-outline-secondary btn-sm'>NY Times</a><br>
-        <a href="{% url 'past_words' %}" class='btn btn-outline-secondary btn-sm'>History</a><br>
+        <a href="https://www.nytimes.com/games/wordle/index.html" target="_blank" class='btn btn-outline-secondary btn-sm'>NY Times</a><br><br>
+        <a href="{% url 'past_words' %}" class='btn btn-outline-secondary btn-sm'>History</a><br><br>
+        <a href="{% url 'wordle_test' %}" class='btn btn-outline-secondary btn-sm'>Test</a><br><br>
     </div>
     <div class="col-sm-4">
         <h2>Puzzle</h2>
