--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -5,27 +5,29 @@
     {% if user.is_authenticated %}
       {% if user.first_name == "Amanda" %}
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link active" href="{% url 'dogs' %}">Dogs</a></li>
-        <li class="nav-item"><a class="nav-link active" href="{% url 'dog_diary' %}">Diary</a></li>
+          <li class="nav-item"><a class="nav-link active" href="{% url 'dogs' %}">Dogs</a></li>
+          <li class="nav-item"><a class="nav-link active" href="{% url 'dog_diary' %}">Diary</a></li>
+          </ul>
       {% else %}
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link active" href="{% url 'diary' %}">Diary</a></li>
-        <li class="nav-item"><a class="nav-link active" href="{% url 'events' %}">Events</a></li>
-        <li class="nav-item"><a class="nav-link active" href="{% url 'notes' %}">Notes</a></li>
-        <li class="nav-item"><a class="nav-link active" href="{% url 'quotes' %}">Quotes</a></li>
-        <li class="nav-item"><a class="nav-link active" href="{% url 'birthdays' %}">Birthdays</a></li>
-        <li class="nav-item"><a class="nav-link active" href="{% url 'shopping'%}">Shopping</a></li>
-        <li class="nav-item"><a class="nav-link active" href="{% url 'dogs' %}">Dogs</a></li>
-        <li class="nav-item"><a class="nav-link active" href="{% url 'clash' %}">Clash</a></li>
-        <li class="nav-item"><a class="nav-link active" href="{% url 'timers' %}">Timer</a></li>
-        <li class="nav-item"><a class="nav-link active" href="{% url 'wordle'%}">Wordle</a></li>
-        <li class="nav-item"><a class="nav-link active" href="{% url 'word'%}">Word</a></li>
-      </ul>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link active" href="{% url 'diary' %}">Diary</a></li>
+          <li class="nav-item"><a class="nav-link active" href="{% url 'events' %}">Events</a></li>
+          <li class="nav-item"><a class="nav-link active" href="{% url 'notes' %}">Notes</a></li>
+          <li class="nav-item"><a class="nav-link active" href="{% url 'quotes' %}">Quotes</a></li>
+          <li class="nav-item"><a class="nav-link active" href="{% url 'birthdays' %}">Birthdays</a></li>
+          <li class="nav-item"><a class="nav-link active" href="{% url 'shopping'%}">Shopping</a></li>
+          <li class="nav-item"><a class="nav-link active" href="{% url 'dogs' %}">Dogs</a></li>
+          <li class="nav-item"><a class="nav-link active" href="{% url 'clash' %}">Clash</a></li>
+          <li class="nav-item"><a class="nav-link active" href="{% url 'tennis' %}">Tennis</a></li>
+          <li class="nav-item"><a class="nav-link active" href="{% url 'timers' %}">Timer</a></li>
+          <li class="nav-item"><a class="nav-link active" href="{% url 'wordle'%}">Wordle</a></li>
+          <li class="nav-item"><a class="nav-link active" href="{% url 'word'%}">Word</a></li>
+        </ul>
+      {% endif %}
       <ul class="nav justify-content-end">
         <li class="nav-item nav-link">Hello {{ user.first_name }}</a></li>
         <li class="nav-item"><a class="nav-link active" href="{% url 'logout' %}">Log out</a></li>
       </ul>
-    {% endif %}
    {% else %}
       <ul class="nav justify-content-end">
         <li class="nav-item"><a class="nav-link active" href="{% url 'clash' %}">Clash</a></li>
