--- a/app/templates/wordle.html
+++ b/app/templates/wordle.html
@@ -9,17 +9,17 @@
 
 
 <div class="row">
-    <div class="col-sm-2">
+    <div class="col-sm-1">
         <h2>Nav</h2>
         <a href="https://www.nytimes.com/games/wordle/index.html" target="_blank" class='btn btn-outline-secondary btn-sm'>NY Times</a><br><br>
         <a href="{% url 'past_words' %}" class='btn btn-outline-secondary btn-sm'>History</a><br><br>
         <a href="{% url 'wordle_test' %}" class='btn btn-outline-secondary btn-sm'>Test</a><br><br>
     </div>
     <div class="col-sm-4">
+            <h2>Puzzle</h2>
         <form action="/wordle" method="POST">
         {% csrf_token %}
-<!--Previous Words-->
-            <h2>Puzzle</h2>
+<!--Previous Entries-->
             <table class='table table-sm' style="text-align: center;">
                 {% for word in input_array %}
                     <input type="hidden" name="Prior{{forloop.counter}}" value="{{ word }}"></td>
@@ -65,7 +65,7 @@
         {% endfor %}<br>
         <a href="{% url 'add_wordle' fav_word %}" class='btn btn-outline-secondary btn-sm'>Add '{{ fav_word }}'</a><br>
     </div>
-    <div class="col-sm-2">
+    <div class="col-sm-3">
         <h2>Letters</h2>
         {% for item in counter %}
             {{ item }}<br>
@@ -74,7 +74,8 @@
         {{ random_item.upper }}
         <h2>Used words</h2>
         {% for word in used_words %}
-            {{ word.word.upper }} ({{ word.date }})<br>
+            <a href="{% url 'wordle_clear' word.id %}">'{{ word.word.upper }}'</a>
+            ({{ word.date }})<br>
         {% endfor %}
     </div>
 </div>
