--- a/app/templates/tennis.html
+++ b/app/templates/tennis.html
@@ -2,6 +2,6 @@
 {% block content %}
 <h1>Tennis</h1>
 
-    <a class="btn btn-yak" href="{% url 'tennis_game' %}">Start</a>
+    <a class="btn btn-yak" href="{% url 'tennis_match' %}">Start</a>
 
 {% endblock %}
