--- a/app/templates/wordle_test.html
+++ b/app/templates/wordle_test.html
@@ -19,7 +19,9 @@
                 </tr>
             {% endfor %}
         </table>
-        Future Average Score: <b>{{ score }}</b> (originally 3.47)<br><br>
+        Future Average Score: <b>{{ score }}</b> (originally 3.47)<br>
+        {{ message }}<br><br>
+        <a href="{% url 'wordle_test' %}" class='btn btn-yak'>Redo</a><br>
     </div>
     <div class="col-sm-4">
         <h2>Second Word</h2>
@@ -28,6 +30,7 @@
                 {{ word | upper }}: {{ count }}<br>
             {% endif %}
         {% endfor %}<br>
+
     </div>
 </div>
 <div class="row">
