--- a/app/templates/dog_diary.html
+++ b/app/templates/dog_diary.html
@@ -1,7 +1,8 @@
 {% extends 'base.html'%}
 {% block content %}
 <h1>Dog Diary</h1>
-
+    {{ chart | safe }}
+    {{ chart_pie | safe }}
     <table class="table">
         <thead class="table-light">
             <th>Day</th>
